# prj-my-doe

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/exp_design/data_gen/domain/: base.py  sample.py
src/exp_design/data_gen/parameter/: simple_parameters.py
src/exp_design/data_gen/searcher/: base.py  d_optimal_criteria.py
src/exp_design/domain/: base.py  sample.py
src/exp_design/model/area_scanner/: base.py  knn.py
src/exp_design/model/models/: base.py  ensemble.py  gpr.py  lgbm.py  nnmodel.py
src/exp_design/model/normalizer/: base.py  simple_normalizer.py
src/exp_design/model/sampler/: ad_base_sampler.py  base.py  bayes_sampler.py
src/exp_design/parameter/: base.py  simple_parameters.py
src/exp_design/searcher/: base.py  d_optimal_criteria.py
