[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "exp_design"
version = "0.0.4"
authors = [
    {name = "shoyu", email = "shoh.k.19940320@gmail.com"},
]
description = "Library to traning a model for forecasting time series."
readme = "README.md"
requires-python = ">=3.10.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
	"click==8.1.3",
	"exceptiongroup==1.1.1",
	"gitdb==4.0.10",
	"mccabe==0.7.0",
	"mdurl==0.1.2",
	"numpy==1.24.3",
	"packaging==23.1",
	"pandas==2.0.2",
	"pathspec==0.11.1",
	"pbr==5.11.1",
	"platformdirs==3.5.3",
	"pluggy==1.0.0",
	"Pygments==2.15.1",
	"python-dateutil==2.8.2",
	"pytz==2023.3",
	"PyYAML==6.0",
	"rich==13.4.2",
	"six==1.16.0",
	"smmap==5.0.0",
	"stevedore==5.1.0",
	"tomli==2.0.1",
	"tzdata==2023.3",
	"scikit-learn==1.2.2",
	"scipy==1.10.1"
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "flake8", "mypy"]

[project.urls]
Source = "https://github.com/shoyu0320/prj-my-doe"

[tool.hatch.build]
exclude = []

[tool.setuptools]
package-dir = {"" = "src"}
